# CracklingPlusPlus

./: CMakeLists.txt
ISSLCreateIndex/: ISSLCreateIndex.cpp  ISSLCreateIndex.hpp
lib/: CMakeLists.txt  ISSLScoringModule.cpp  ISSLScoringModuleMMF.cpp
src/: CracklingPlusPlus.cpp
